新增新增USER功能和測試(尚未真實連接尚未真實連接MYSQL)，但是Predict要重構
